# QS_World_University_Rankings_2025

./: 1_data_prepare.ipynb  README.md  init.py  llm.py  pyproject.toml
data/: uk_1.json  us_1.json  us_2.json  us_3.json  us_4.json  us_5.json
