[project]
name = "qs-world-university-rankings-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "kagglehub[pandas-datasets]>=0.3.12",
    "numpy>=2.0.2",
    "openai>=1.76.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymongo>=4.12.0",
    "tenacity>=9.1.2",
]
